crates/ir/tests/ir/snapshots/main__ir__lower__traits__constrained_fn_ref_eta_expand.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__constrained_fn_ref_eta_expand

import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn show_it(v0: Dict[core/show.Show, o11], v1: o11) -> String =
  let v2: String = trait_call core/show.Show.show(v0, v1)
  v2

fn main() -> Unit =
  let v3: (Int) -> String = make_closure(lambda$32, [])
  let_join v13(v11: Bool) =
    let v7: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
    let v12: Unit = call println(v7, v11)
    v12
  in
  let v8: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v9: String = call_closure v3(42)
  let v10: Bool = trait_call core/eq.Eq.eq(v8, v9, "42")
  jump v13(v10)

fn lambda$32(v4: Int) -> String =
  let v5: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v6: String = call show_it(v5, v4)
  v6
