crates/ir/tests/ir/snapshots/main__ir__lower__traits__constrained_fn_ref_scope_capture.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__constrained_fn_ref_scope_capture

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
import core/io/println as println(h) -> Unit
declare println: (h) -> Unit

fn show_it(v0: Dict[core/show.Show, k8], v1: k8) -> String =
  let v2: String = trait_call core/show.Show.show(v0, v1)
  v2

fn use_it(v3: Dict[core/show.Show, p8], v4: p8) -> String =
  let v9: (r8) -> String = make_closure(fn_ref$26, [v3])
  let v5: (r8) -> String = v9
  let v10: String = call_closure v5(v4)
  v10

fn main() -> Unit =
  let_join v18(v16: Bool) =
    let v11: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
    let v17: Unit = call println(v11, v16)
    v17
  in
  let v12: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v13: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v14: String = call use_it(v13, 42)
  let v15: Bool = trait_call core/eq.Eq.eq(v12, v14, "42")
  jump v18(v15)

fn fn_ref$26(v6: Dict[core/show.Show, r8], v7: r8) -> String =
  let v8: String = call show_it(v6, v7)
  v8
