crates/ir/tests/ir/snapshots/main__ir__lower__traits__constrained_fn_ref_type_app.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__constrained_fn_ref_type_app

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn show_it(v0: Dict[core/show.Show, m12], v1: m12) -> String =
  let v2: String = trait_call core/show.Show.show(v0, v1)
  v2

fn main() -> Unit =
  let v4: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v3: (String) -> String = make_closure(fn_ref$27, [v4])
  let_join v14(v12: Bool) =
    let v8: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
    let v13: Unit = call println(v8, v12)
    v13
  in
  let v9: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v10: String = call_closure v3("hello")
  let v11: Bool = trait_call core/eq.Eq.eq(v9, v10, "hello")
  jump v14(v11)

fn fn_ref$27(v5: Dict[core/show.Show, String], v6: String) -> String =
  let v7: String = call show_it(v5, v6)
  v7
