crates/ir/tests/ir/snapshots/main__ir__lower__traits__constrained_instance_multi_bound_ok.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__constrained_instance_multi_bound_ok

type Pair[x10, y10] = Pair#0(x10, y10)
instance core/show.Show[Pair$$Var0$$Var1] { show=Show$$Pair$$Var0$$Var1$$show }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let_join v10(v8: Bool) =
    let v0: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
    let v9: Unit = call println(v0, v8)
    v9
  in
  let v1: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v2: Pair[Int, String] = construct Pair::Pair#0(1, "ok")
  let v3: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v4: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v5: Dict[core/show.Show, Pair[Int, String]] = make_dict core/show.Show[Pair[Int, String]](v3, v4)
  let v6: String = trait_call core/show.Show.show(v5, v2)
  let v7: Bool = trait_call core/eq.Eq.eq(v1, v6, "pair")
  jump v10(v7)

fn Show$$Pair$$Var0$$Var1$$show(v11: Dict[core/eq.Eq, p11], v12: Dict[core/show.Show, q11], v13: Pair[p11, q11]) -> String =
  "pair"
