crates/ir/tests/ir/snapshots/main__ir__lower__traits__constrained_instance_option_ok.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__constrained_instance_option_ok

type Option[x10] = Some#0(x10) | None#1
instance core/show.Show[Option$$Var0] { show=Show$$Option$$Var0$$show }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let_join v9(v7: Bool) =
    let v0: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
    let v8: Unit = call println(v0, v7)
    v8
  in
  let v1: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v2: Option[Int] = construct Option::Some#0(42)
  let v3: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v4: Dict[core/show.Show, Option[Int]] = make_dict core/show.Show[Option[Int]](v3)
  let v5: String = trait_call core/show.Show.show(v4, v2)
  let v6: Bool = trait_call core/eq.Eq.eq(v1, v5, "ok")
  jump v9(v6)

fn Show$$Option$$Var0$$show(v10: Dict[core/show.Show, o11], v11: Option[o11]) -> String =
  "ok"
