crates/ir/tests/ir/snapshots/main__ir__lower__traits__constrained_instance_unconstrained_regression.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__constrained_instance_unconstrained_regression

type Box = Box#0(Int)
instance core/show.Show[Box] { show=Show$$Box$$show }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let_join v8(v6: Bool) =
    let v0: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
    let v7: Unit = call println(v0, v6)
    v7
  in
  let v1: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v2: Box = construct Box::Box#0(1)
  let v3: Dict[core/show.Show, Box] = get_dict core/show.Show[Box]
  let v4: String = trait_call core/show.Show.show(v3, v2)
  let v5: Bool = trait_call core/eq.Eq.eq(v1, v4, "box")
  jump v8(v5)

fn Show$$Box$$show(v9: Box) -> String =
  "box"
