crates/ir/tests/ir/snapshots/main__ir__lower__traits__constrained_polymorphism.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__constrained_polymorphism

struct A { x: Int }
struct B { y: Int }
instance core/eq.Eq[A] { eq=Eq$$A$$eq }
instance core/eq.Eq[B] { eq=Eq$$B$$eq }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn same(v0: Dict[core/eq.Eq, o11], v1: o11, v2: o11) -> Bool =
  let v3: Bool = trait_call core/eq.Eq.eq(v0, v1, v2)
  v3

fn main() -> Unit =
  let_join v15(v13: Bool) =
    let v4: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
    let v14: Unit = call println(v4, v13)
    v14
  in
  let v5: A = construct A(1)
  let v6: A = construct A(1)
  let v7: Dict[core/eq.Eq, A] = get_dict core/eq.Eq[A]
  let v8: Bool = call same(v7, v5, v6)
  if v8 {
    let v10: B = construct B(2)
    let v11: B = construct B(2)
    let v9: Dict[core/eq.Eq, B] = get_dict core/eq.Eq[B]
    let v12: Bool = call same(v9, v10, v11)
    jump v15(v12)
  } else {
    jump v15(false)
  }

fn Eq$$A$$eq(v16: A, v17: A) -> Bool =
  let_join v23(v22: Bool) =
    if v22 {
      true
    } else {
      false
    }
  in
  let v18: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v19: Int = project v16.0
  let v20: Int = project v17.0
  let v21: Bool = trait_call core/eq.Eq.eq(v18, v19, v20)
  jump v23(v21)

fn Eq$$B$$eq(v24: B, v25: B) -> Bool =
  let_join v31(v30: Bool) =
    if v30 {
      true
    } else {
      false
    }
  in
  let v26: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v27: Int = project v24.0
  let v28: Int = project v25.0
  let v29: Bool = trait_call core/eq.Eq.eq(v26, v27, v28)
  jump v31(v29)
