crates/ir/tests/ir/snapshots/main__ir__lower__traits__derive_eq_record.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__derive_eq_record

struct Point { x: Int, y: Int }
instance core/eq.Eq[Point] { eq=Eq$$Point$$eq }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[w7]) -> List[w7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let_join v7(v5: Bool) =
    let v0: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
    let v6: Unit = call println(v0, v5)
    v6
  in
  let v1: Dict[core/eq.Eq, Point] = get_dict core/eq.Eq[Point]
  let v2: Point = construct Point(1, 2)
  let v3: Point = construct Point(1, 2)
  let v4: Bool = trait_call core/eq.Eq.eq(v1, v2, v3)
  jump v7(v4)

fn Eq$$Point$$eq(v8: Point, v9: Point) -> Bool =
  let_join v21(v14: Bool) =
    if v14 {
      let_join v20(v19: Bool) =
        if v19 {
          true
        } else {
          false
        }
      in
      let v15: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
      let v16: Int = project v8.1
      let v17: Int = project v9.1
      let v18: Bool = trait_call core/eq.Eq.eq(v15, v16, v17)
      jump v20(v18)
    } else {
      false
    }
  in
  let v10: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v11: Int = project v8.0
  let v12: Int = project v9.0
  let v13: Bool = trait_call core/eq.Eq.eq(v10, v11, v12)
  jump v21(v13)
