crates/ir/tests/ir/snapshots/main__ir__lower__traits__derive_eq_sum.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__derive_eq_sum

type Color = Red#0 | Green#1 | Blue#2
instance core/eq.Eq[Color] { eq=Eq$$Color$$eq }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let_join v9(v7: Bool) =
    let v0: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
    let v8: Unit = call println(v0, v7)
    v8
  in
  let v1: Dict[core/eq.Eq, Color] = get_dict core/eq.Eq[Color]
  let v2: Color = construct Color::Red#0()
  let v3: Color = v2
  let v4: Color = construct Color::Green#1()
  let v5: Color = v4
  let v6: Bool = trait_call core/eq.Eq.eq(v1, v3, v5)
  jump v9(v6)

fn Eq$$Color$$eq(v10: Color, v11: Color) -> Bool =
  switch v10 {
    0 ->
      switch v11 {
        0 ->
          true
        _ ->
          false
      }
    1 ->
      false
    2 ->
      false
  }
